--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -178,4 +178,31 @@
 
 	<color name="color_545454">#545454</color>
 	<color name="color_dcf1f5">#dcf1f5</color>
+	
+	<!--药品-->
+	<style name="medicine_left_title">
+		<item name="android:paddingRight">10dp</item>
+		<item name="android:gravity">center_vertical|right</item>
+		<item name="android:textSize">@dimen/text_size_20</item>
+		<item name="android:background">#dcf1f5</item>
+		<item name="android:layout_width">140dp</item>
+	</style>
+	<!--方案中的周期，左边title-->
+	<style name="plan_cycle_left_title">
+		<item name="android:paddingRight">10dp</item>
+		<item name="android:gravity">center</item>
+		<item name="android:textSize">@dimen/text_size_20</item>
+		<item name="android:textColor">#1b1b1b</item>
+		<item name="android:layout_width">200dp</item>
+		<item name="android:layout_height">match_parent</item>
+	</style>
+	<!--方案中的周期，右边-->
+	<style name="plan_cycle_right_title">
+		<item name="android:gravity">center</item>
+		<item name="android:textSize">@dimen/text_size_18</item>
+		<item name="android:textColor">#747474</item>
+		<item name="android:layout_width">match_parent</item>
+		<item name="android:layout_weight">1</item>
+		<item name="android:layout_height">match_parent</item>
+	</style>
 </resources>
