--- a/app/src/main/res/layout/activity_follow.xml
+++ b/app/src/main/res/layout/activity_follow.xml
@@ -78,7 +78,7 @@
             </RelativeLayout>
 
             <RelativeLayout
-                android:id="@+id/rl_pending_follow_up"
+                android:id="@+id/rl_follow_task"
                 android:layout_width="match_parent"
                 android:layout_height="60dip"
                 android:layout_marginTop="@dimen/space_10"
