--- a/app/src/main/res/layout/activity_patient_add.xml
+++ b/app/src/main/res/layout/activity_patient_add.xml
@@ -37,6 +37,7 @@
                     <EditText
                         android:id="@+id/etPhone"
                         android:background="@color/transparent"
+                        android:inputType="phone"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent" />
@@ -112,8 +113,8 @@
                         android:textSize="@dimen/text_size_16"
                         android:layout_gravity="left"
                         android:gravity="center_vertical" />
-                    <EditText
-                        android:id="@+id/etGroupName"
+                    <TextView
+                        android:id="@+id/tvGroupName"
                         android:background="@color/transparent"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -128,8 +129,8 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:text="@string/save"
+            style="@style/btn_blue"
             android:textColor="@color/white"
-            android:background="@color/color_btn_bg"
             android:layout_gravity="bottom" />
     </FrameLayout>
 
