--- a/app/src/main/res/layout/activity_plan_mgr.xml
+++ b/app/src/main/res/layout/activity_plan_mgr.xml
@@ -76,7 +76,7 @@
                 android:id="@+id/swipe_menu_lv"
                 android:layout_marginTop="@dimen/space_10"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"></ui.swipemenulistview.SwipeMenuListView>
+                android:layout_height="match_parent" />
         </LinearLayout>
     </ScrollView>
 
