--- a/app/src/main/res/layout/item_addressbook.xml
+++ b/app/src/main/res/layout/item_addressbook.xml
@@ -15,6 +15,9 @@
 
         <RadioButton
             android:id="@+id/rbPhone"
+            android:clickable="false"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
             android:layout_width="wrap_content"
             android:layout_height="match_parent" />
 
