--- a/app/src/main/res/layout/item_medicine.xml
+++ b/app/src/main/res/layout/item_medicine.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent">
 
     <View android:layout_width="match_parent"
+        android:layout_marginTop="10dp"
         android:layout_height="1dp"
         android:background="#d3d3d3"/>
     
@@ -20,6 +21,7 @@
             android:id="@+id/etName"
             android:text="名称啊"
             android:background="@color/transparent"
+            android:paddingLeft="@dimen/space_5"
             android:layout_width="match_parent"
             android:layout_weight="1"
             android:layout_height="match_parent" />
@@ -45,7 +47,7 @@
                 android:id="@+id/tvTimeMorning"
                 android:text="早"
                 android:background="@drawable/btn_medicine_time"
-                android:textSize="@dimen/text_size_22"
+                android:textSize="@dimen/text_size_16"
                 android:gravity="center_vertical|center_horizontal"
                 android:layout_width="70dp"
                 android:layout_height="35dp" />
@@ -54,7 +56,7 @@
                 android:text="中"
                 android:layout_marginLeft="@dimen/space_10"
                 android:background="@drawable/btn_medicine_time"
-                android:textSize="@dimen/text_size_22"
+                android:textSize="@dimen/text_size_16"
                 android:gravity="center_vertical|center_horizontal"
                 android:layout_width="70dp"
                 android:layout_height="35dp" />
@@ -63,7 +65,7 @@
                 android:text="晚"
                 android:layout_marginLeft="@dimen/space_10"
                 android:background="@drawable/btn_medicine_time"
-                android:textSize="@dimen/text_size_22"
+                android:textSize="@dimen/text_size_16"
                 android:gravity="center_vertical|center_horizontal"
                 android:layout_width="70dp"
                 android:layout_height="35dp" />
@@ -95,12 +97,13 @@
             android:text="用量"
             style="@style/medicine_left_title"
             android:layout_height="match_parent" />
-        <LinearLayout
-            android:layout_weight="1"
+        <com.hxqydyl.app.ys.ui.scrollviewandgridview.MyScrollListView
+            android:id="@+id/lvDosage"
+            android:paddingLeft="@dimen/space_5"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-        </LinearLayout>
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            />
     </LinearLayout>
 
 
