--- a/app/src/main/res/layout/activity_photo_evpi.xml
+++ b/app/src/main/res/layout/activity_photo_evpi.xml
@@ -45,6 +45,7 @@
             </ScrollView>
 
             <Button
+                android:id="@+id/register_btn"
                 style="@style/btn_blue"
                 android:layout_alignParentBottom="true"
                 android:layout_margin="30dp"
