--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -87,7 +87,7 @@
             android:layout_marginTop="@dimen/space_8">
 
             <TextView
-                android:id="@+id/forget_btn"
+                android:id="@+id/login_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
