添加查看病历详情页面，添加注解方式查找view的工具类，添加图片的实体类

--- a/app/src/main/res/layout/activity_patient_details.xml
+++ b/app/src/main/res/layout/activity_patient_details.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:background="@color/white">
 
-        <include android:id="@+id/llPatientSimpleInfo" layout="@layout/patient_simple_info" />
+        <include layout="@layout/patient_simple_info" />
 
         <TextView
             android:id="@+id/tvDeletePatient"
