--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -104,5 +104,9 @@
     <color name="color_696969">#696969</color>
     <color name="color_fff26c4f">#fff26c4f</color>
     <color name="color_80f26c4f">#80f26c4f</color>
+    <color name="color_ddf0f6">#ddf0f6</color>
+    <color name="color_61666c">#61666c</color>
+    <color name="color_686868">#686868</color>
+    <color name="color_040407">#040407</color>
 
 </resources>
