--- a/app/src/main/res/layout/patient_simple_info.xml
+++ b/app/src/main/res/layout/patient_simple_info.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="70dp"
+    android:id="@+id/llPatientSimpleInfo"
     android:gravity="center_vertical"
     android:orientation="horizontal"
     android:paddingLeft="@dimen/space_23"
