--- a/app/src/main/res/layout/activity_good_choice.xml
+++ b/app/src/main/res/layout/activity_good_choice.xml
@@ -32,18 +32,17 @@
                 android:id="@+id/gridview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="35dp"
+                android:layout_marginTop="@dimen/space_25"
                 android:columnWidth="75dp"
                 android:gravity="center"
-                android:horizontalSpacing="15dip"
                 android:numColumns="3"
                 android:scrollbars="none"
-                android:verticalSpacing="14dp"></com.hxqydyl.app.ys.ui.scrollviewandgridview.MyGridView>
+                android:verticalSpacing="12dp"></com.hxqydyl.app.ys.ui.scrollviewandgridview.MyGridView>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="45dp"
+                android:layout_marginTop="@dimen/space_30"
                 android:orientation="horizontal">
 
                 <Button
