--- a/app/src/main/res/layout/tags_item.xml
+++ b/app/src/main/res/layout/tags_item.xml
@@ -1,32 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_tags_item"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/tags_bg_color_seletor"
-        android:gravity="center"
-        android:paddingBottom="13dip"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
-        android:paddingTop="13dip"
-        android:textColor="@drawable/tags_text_color_seletor"
-        android:textSize="15sp" >
-    </TextView>
+    <RelativeLayout
+        android:layout_width="80dp"
+        android:layout_height="60dp">
 
-    <CheckBox
-        android:id="@+id/tags_checkbox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@id/tv_tags_item"
-        android:layout_alignRight="@id/tv_tags_item"
-        android:layout_alignTop="@id/tv_tags_item"
-        android:checked="false"
-        android:clickable="false"
-        android:focusable="false"
-        android:visibility="gone" />
+        <TextView
+            android:id="@+id/tv_tags_item"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/tags_bg_color_seletor"
+            android:gravity="center"
+            android:paddingBottom="10dip"
+            android:paddingLeft="12dp"
+            android:paddingRight="12dp"
+            android:paddingTop="13dip"
+            android:textColor="@drawable/tags_text_color_seletor"
+            android:textSize="@dimen/text_size_14"></TextView>
 
-</RelativeLayout>
+        <CheckBox
+            android:id="@+id/tags_checkbox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@id/tv_tags_item"
+            android:layout_alignRight="@id/tv_tags_item"
+            android:layout_alignTop="@id/tv_tags_item"
+            android:checked="false"
+            android:clickable="false"
+            android:focusable="false"
+            android:visibility="gone" />
+
+    </RelativeLayout>
+</LinearLayout>
