网络请求修改

--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -16,11 +16,12 @@
         android:orientation="vertical"
         android:paddingLeft="@dimen/space_30"
         android:paddingRight="@dimen/space_30">
+
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="60dip"
+            android:layout_marginTop="50dip"
             android:src="@mipmap/ic_logo" />
 
         <TextView
@@ -32,6 +33,7 @@
             android:textSize="@dimen/text_size_22" />
 
         <EditText
+            android:id="@+id/mobile_edit"
             style="@style/edit_blue"
             android:layout_width="match_parent"
             android:layout_height="45dp"
@@ -48,20 +50,22 @@
             android:orientation="horizontal">
 
             <EditText
+                android:id="@+id/captcha_edit"
                 style="@style/edit_blue"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="6"
                 android:hint="@string/code"
-                android:paddingLeft="@dimen/space_15"
-                android:inputType="number" />
+                android:inputType="number"
+                android:paddingLeft="@dimen/space_15" />
 
 
             <Button
+                android:id="@+id/btn_code"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="4"
                 android:layout_marginLeft="7dp"
+                android:layout_weight="4"
                 android:background="@drawable/btn_bg_selecter"
                 android:text="@string/phone_code"
                 android:textColor="@color/text_color_white"
@@ -69,6 +73,7 @@
         </LinearLayout>
 
         <EditText
+            android:id="@+id/password_edit"
             style="@style/edit_blue"
             android:layout_width="match_parent"
             android:layout_height="45dp"
@@ -78,12 +83,11 @@
             android:paddingLeft="@dimen/space_15" />
 
         <Button
+            android:id="@+id/next_btn"
             android:layout_width="match_parent"
             android:layout_height="40dip"
             android:layout_marginTop="@dimen/space_25"
             android:background="@drawable/btn_bg_selecter"
-            android:clickable="false"
-            android:enabled="false"
             android:text="@string/next"
             android:textColor="@color/text_color_white"
             android:textSize="@dimen/text_size_18" />
