--- a/app/src/main/res/layout/case_history_list_item.xml
+++ b/app/src/main/res/layout/case_history_list_item.xml
@@ -3,12 +3,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:padding="@dimen/space_5"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/iv"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp" />
+        android:layout_height="match_parent">
+        <ImageView
+            android:id="@+id/iv"
+            android:layout_width="60dp"
+            android:layout_height="60dp" />
 
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"/>
+
+    </FrameLayout>
 </LinearLayout>
