--- a/app/src/main/res/layout/patient_list_child_item.xml
+++ b/app/src/main/res/layout/patient_list_child_item.xml
@@ -18,17 +18,19 @@
 
             <ImageView
                 android:id="@+id/ivMoveToOtherGroup"
-                android:layout_width="50dp"
+                android:layout_width="58dp"
                 android:layout_height="match_parent"
-                android:background="@color/color_80f26c4f"
+                android:background="@color/color_cdf26c4f"
+                android:scaleType="center"
                 android:src="@mipmap/icon_move_to_other_group" />
 
             <ImageView
                 android:id="@+id/ivDeletePatient"
-                android:layout_width="50dp"
+                android:layout_width="58dp"
                 android:layout_height="match_parent"
                 android:background="@color/color_fff26c4f"
-                android:src="@mipmap/icon_delete_patient" />
+                android:scaleType="center"
+                android:src="@mipmap/ic_delete_patient_group" />
         </LinearLayout>
 
         <LinearLayout
