--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -225,4 +225,21 @@
 		<item name="android:shadowColor">@color/color_61666c</item>
 		<item name="android:background">@drawable/shape_case_report_right_bg</item>
 	</style>
+
+	<style name="add_case_report_left">
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:paddingBottom">@dimen/space_13</item>
+		<item name="android:paddingTop">@dimen/space_13</item>
+		<item name="android:gravity">center_vertical</item>
+		<item name="android:paddingLeft">@dimen/space_27</item>
+		<item name="android:paddingRight">@dimen/space_20</item>
+		<item name="android:textSize">@dimen/text_size_15</item>
+		<item name="android:background">@color/color_ddf0f6</item>
+		<item name="android:textColor">@color/black</item>
+	</style>
+	<style name="add_case_report_right" parent="add_case_report_left">
+		<item name="android:background">@color/white</item>
+		<item name="android:textColor">@color/color_4b4b4b</item>
+		<item name="android:paddingLeft">40dp</item>
+	</style>
 </resources>
