--- a/app/src/main/res/layout/activity_follow_up_form.xml
+++ b/app/src/main/res/layout/activity_follow_up_form.xml
@@ -2,8 +2,30 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/color_f7f7f7"
     android:orientation="vertical">
 
     <include layout="@layout/top_title" />
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ExpandableListView
+            android:id="@+id/lvForm"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:dividerHeight="@dimen/space_5"></ExpandableListView>
+
+        <Button
+            android:id="@+id/bDoctorAdvice"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="@dimen/space_10"
+            android:layout_marginLeft="@dimen/space_15"
+            android:layout_marginRight="@dimen/space_15"
+            android:background="@color/color_2080ba" />
+    </FrameLayout>
 
 </LinearLayout>
